# colored

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: control.rs
src/: color.rs  control.rs  lib.rs  style.rs
tests/: ansi_term_compat.rs
