[package]
name = "colored"
description = "The most simple way to add colors in your terminal"
version = "1.8.0"
authors = ["Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/mackwic/colored"
repository = "https://github.com/mackwic/colored"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "term-painter"]

[features]
# with this feature, no color will ever be written
no-color = []

[dependencies]
lazy_static = "1.3.0"

[target.'cfg(windows)'.dependencies]
winconsole = "0.11.0"

[dev_dependencies]
ansi_term = "0.12"
rspec = "=1.0.0-beta.3"
